<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/scrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/linear_nearby"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/thumbnail1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:contentDescription="@string/image_sharing"
            />


        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/share_articles_with_ppl"
            android:textColor="@color/md_black_87"
            android:textSize="16sp"/>


        <TextView
            android:id="@+id/msg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/internet_conn_require"
            android:textColor="@color/md_black_54"
            android:textSize="12sp"
            android:nextFocusLeft="@+id/receive"
            android:nextFocusRight="@+id/send"
            android:contentDescription="@string/internet_conn_require"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1">

                <Button
                    android:id="@id/receive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_button"
                    android:gravity="center"
                    android:text="@string/receive"
                    android:stateListAnimator="@anim/button_state_list"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:contentDescription="@string/button_receive"/>

            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1">

                <Button
                    android:id="@id/send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/ripple_button"
                    android:gravity="center"
                    android:text="@string/send"
                    android:stateListAnimator="@anim/button_state_list"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:contentDescription="@string/button_send"/>


            </FrameLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>