<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/widget"
              xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@android:color/white"
              android:padding="@dimen/widget_margin">


    <TextView
        android:id="@+id/toolbarTitle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBar"
        android:background="@color/primary"
        android:text="@string/reading_list"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textSize="20sp">

    </TextView>


    <ListView
        android:id="@+id/recyclerView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/md_black_20"
        android:dividerHeight="1dp"
        />

    <LinearLayout
        android:id="@+id/empty_state"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/empyty_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_state"
            android:contentDescription="@string/no_articles_added"/>

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_articles_Added"
            android:textColor="@color/empty_text"
            android:textSize="14sp"/>

    </LinearLayout>

</LinearLayout>