<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:id="@+id/card"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginEnd="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="2dp"
    app:cardElevation="5dp"
    android:nextFocusDown="@+id/marker"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:id="@+id/swipeable_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/item_selection">


        <ImageView
            android:id="@id/marker"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:nextFocusRight="@+id/articleTitle"
            android:contentDescription="@string/generic_image"
            />

        <TextView
            android:id="@id/articleTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/marker"
            android:layout_toEndOf="@id/marker"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:paddingRight="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:textColor="@color/md_black_87"
            android:textSize="16sp"
            android:nextFocusDown="@+id/articleUrl"
            android:contentDescription="@string/article_title"/>

        <TextView
            android:id="@id/articleUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/articleTitle"
            android:layout_toRightOf="@id/marker"
            android:layout_toEndOf="@id/marker"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="8dp"
            android:singleLine="true"
            android:textColor="@color/md_black_54"
            android:textSize="12sp"
            android:nextFocusDown="@+id/articledesc"
            android:contentDescription="@string/article_url"/>

        <TextView
            android:id="@id/articledesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/articleUrl"
            android:layout_toRightOf="@id/marker"
            android:layout_toEndOf="@id/marker"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/md_black_54"
            android:textSize="12sp"
            android:nextFocusUp="@id/card"
            android:contentDescription="@string/article_desc"/>


    </RelativeLayout>

</android.support.v7.widget.CardView>
